--- a/styled_background/html_example.html
+++ b/styled_background/html_example.html
@@ -1,6 +1,6 @@
 <html>
   <style>
-      /*
+    /*
           mobileAcctBgImageSize     => "contain", "cover" or custom - "Npx Npx" "N%  N%" "auto auto" and combinations of these
                                         default (if not specified) => "auto auto"
 
@@ -17,52 +17,57 @@
                                         default (if not specified) => "0px"
       */
 
-      html { box-sizing: border-box;}
-      .wrapper {
-        width: 448px;
-        height: 962px;
-        border: 1px solid black;
-        margin: 25px auto;
-        position:relative;
-      }
+    html {
+      box-sizing: border-box;
+    }
+    .wrapper {
+      width: 448px;
+      height: 962px;
+      border: 1px solid black;
+      margin: 25px auto;
+      position: relative;
+    }
 
-      .header {
-        width:100%;
-        height: 100px;
-        background:gray;
-      }
+    .header {
+      width: 100%;
+      height: 100px;
+      background: gray;
+    }
 
-      .body {
-        position:absolute;
-        top:100px;
-        bottom:65px;
-        width:100%; 
-        background-image:url("https://companieslogo.com/img/orig/ALKT-35963011.png?t=1720244490");
-        background-size: contain;
-        background-repeat:no-repeat;
+    .body {
+      position: absolute;
+      top: 100px;
+      bottom: 65px;
+      width: 100%;
+      background-repeat: no-repeat;
 
-        /* right align with offset x-axis nudged to the right 60px. 50% or "center" for y axis */
-        background-position: calc(100% + 60px) 50%;
+      background-image: url('https://companieslogo.com/img/orig/ALKT-35963011.png?t=1720244490');
 
-        /* left aligned with negative offset x-axis to nudge to the left 60px. 50% or "center" for y axis */
-        /* background-position: calc(0% - 60px) 50%; */
+      /* "contain", "cover", or custom: "Npx Npx" "N%  N%" "auto auto" and combinations of these */
+      background-size: 150% 50%;
 
-        /* right align with offset of negative 15px x-axis.  50% or "center" for y axis */
-        /* background-position: calc(100% - 15px) 50%; */
+      /* right align with offset x-axis nudged to the right 60px. 50% or "center" for y axis */
+      /* background-position: calc(100% + 60px) 50%; */
 
-        /* right align with 50% positive offset x-axis.  Same as 150%. 50% or "center" for y axis */
-        /* background-position: calc(100% + 50%) 50%; */
+      /* left aligned with negative offset x-axis to nudge to the left 60px. 50% or "center" for y axis */
+      /* background-position: calc(0% - 60px) 50%; */
 
-        /* background-position: 100% 50%; */
-      }
+      /* right align with offset of negative 15px x-axis.  50% or "center" for y axis */
+      /* background-position: calc(100% - 15px) 50%; */
 
-      .shortcutbar {
-        position:absolute;
-        bottom:0;
-        height: 65px;
-        width:100%;
-        background:gray;
-      }
+      /* right align with 50% positive offset x-axis.  Same as 150%. 50% or "center" for y axis */
+      /* background-position: calc(100% + 50%) 50%; */
+
+      background-position: 0% 50%;
+    }
+
+    .shortcutbar {
+      position: absolute;
+      bottom: 0;
+      height: 65px;
+      width: 100%;
+      background: gray;
+    }
   </style>
   <body>
     <div class="wrapper">
